# Cuda2DCDF

./: .gitignore  CMakeLists.txt  README.md  cdf.cuh  main.cu
data/: README.txt
